--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: An explorer's Blog - AI, math, and more...
+title: An explorer's blog
 author: Marcos Silveira
 email: bymarkone@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
