--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ plugins:
   - jekyll-feed
 
 disqus:
-  shortname: bymarkone
+  shortname: bymarkonex
 
 # Exclude from processing.
 # The following items will not be processed, by default.
